# home-assistant

./: .gitignore  .yamllint  NIX_GUIDE.md  README.md  TESTING.md  automations.yaml  flake.nix  pyproject.toml  requirements-test.txt  scripts.yaml
.claude/: README.md  settings.json  settings.local.json
.github/workflows/: checks.yaml
addons/: git_pull.yaml
assistants/homekit/: bedroom.yaml  dining_room.yaml  hallway.yaml  house.yaml  kitchen.yaml  living_room.yaml  scenes.yaml  study.yaml
automations/bedroom/: bedtime.yaml  lamp.yaml  lamp_switch.yaml  light_switch.yaml  lights.yaml  scene_button.yaml
automations/dining_room/: lights.yaml
automations/house/: README.md  apply_mode_scenes.yaml  away.yaml  away_helper.yaml  end_of_day_detector.yaml  maddy.yaml  maddy_work.yaml  mode.yaml  sam.yaml  sam_work.yaml  sleep.yaml  work.yaml
automations/kitchen/: lights.yaml
automations/living_room/: aircon.yaml  aircon_off.yaml  camera.yaml  camera_away_mode.yaml  camera_off.yaml  camera_on.yaml  donut_lamp.yaml  lamp.yaml  lamp_switch.yaml  scene_button.yaml
esphome/: esphome-web-938e59.yaml
integrations/: entities.yaml  git.yaml  logger.yaml  python_scripts.yaml  restful.yaml
python_scripts/: toggle_house_mode.py
scenes/: away.yaml  sleep.yaml
scripts/: away_scenes.yaml  run-tests.sh  sleep_scenes.yaml  toggle_modes.yaml  validate-config.sh  validate_config.py  work_scenes.yaml
tests/: QUICK_REFERENCE.md  README.md  SETUP.md  __init__.py  conftest.py  test_automation_structure.py
zigbee2mqtt/: configuration.yaml  coordinator_backup.json  state.json
(+76 files in other folders)
